--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.2",
     "element-plus": "^2.3.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
